--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,6 +1,6 @@
 {
-  "apiurl": "https://backend.matic.supply:3000",
-  "explorer": "https://explorer-mainnet.maticvigil.com",
-  "maxAmount": 1000000000000000,
-  "hcaptchasitekey": "d712e7c4-b981-4761-bb8c-c7af95d016dd"
+    "apiurl": "http://localhost:5000",
+    "explorer": "https://explorer.harmony.one/#/address",
+    "maxAmount": 1000000000000000,
+    "hcaptchasitekey": "fb4e25b6-7568-40df-948f-b2cd6be57191"
 }
