--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,53 +1,53 @@
 {
-  "homepage": "https://matic.supply",
-  "name": "polygon-faucet-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@hcaptcha/react-hcaptcha": "^0.3.6",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@walletconnect/web3-provider": "^1.4.1",
-    "axios": "^0.21.1",
-    "gh-pages": "^3.1.0",
-    "react": "^17.0.2",
-    "react-accessible-accordion": "^3.3.4",
-    "react-dom": "^17.0.2",
-    "react-global-configuration": "^1.4.1",
-    "react-hcaptcha": "^0.1.1",
-    "react-markdown": "^6.0.1",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^7.0.4",
-    "use-wallet": "^0.8.1",
-    "web-vitals": "^1.0.1",
-    "web3": "^1.3.5",
-    "web3modal": "^1.9.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "homepage": "https://harmony.supply",
+    "name": "harmony-faucet-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@hcaptcha/react-hcaptcha": "^0.3.6",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@walletconnect/web3-provider": "^1.4.1",
+        "axios": "^0.21.1",
+        "gh-pages": "^3.1.0",
+        "react": "^17.0.2",
+        "react-accessible-accordion": "^3.3.4",
+        "react-dom": "^17.0.2",
+        "react-global-configuration": "^1.4.1",
+        "react-hcaptcha": "^0.1.1",
+        "react-markdown": "^6.0.1",
+        "react-scripts": "4.0.3",
+        "react-toastify": "^7.0.4",
+        "use-wallet": "^0.8.1",
+        "web-vitals": "^1.0.1",
+        "web3": "^1.3.5",
+        "web3modal": "^1.9.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "yarn run build",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
